# completed

./: .gitignore  Cargo.toml  README.md  config.toml  install.sh  send.sh  test.sh
.github/workflows/: ci.yml
docs/: expectation.md
src/: constants.rs  enums.rs  error.rs  helpers.rs  lib.rs  main.rs  notification.rs
