[package]
name = "completion-notifier"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
ctrlc = "3.4.5"
dirs = "5.0.1"
futures = "0.3.31"
lettre = "0.11.11"
mail-send = "0.4.9"
notify-rust = "4.11.3"
reqwest = "0.12.12"
serde = "1.0.217"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
