[package]
name = "hark"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
dirs = "5.0.1"
lettre = { version = "0.11.11", features = ["tokio1", "tokio1-native-tls"] }
notify-rust = "4.11.3"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.18"
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
